--- a/visualization/conway_game_of_life.html
+++ b/visualization/conway_game_of_life.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
         <title> Conway's Game of Life </title>
     </head>
     <body>
@@ -14,6 +15,9 @@
                 <img src="../resource/conway_game_of_life_logo.png" style="height:70px;">
             </a>
         </div>
-        
+
+        <!-- game of life -->
+        <script type="text/javascript" src="grid.js"></script>
+
     </body>
 </html>
