add grey background

--- a/visualization/conway_game_of_life.html
+++ b/visualization/conway_game_of_life.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.min.js"></script>
         <title> Conway's Game of Life </title>
     </head>
-    <body>
+    <body style="background-color:#DCDCDC;">
 
         <!-- navigation bar -->
         <div class="header text-center py-4 bg-dark">
